feat(customer): add automatic yearly customer code generation
- Implemented automatic code generation on customer creation
- Format: WSM-{year}-{4 digit sequence}
- Added repository method to fetch last code by prefix
- Ensured transactional consistency in service layer

fix(payment): correct PaymentOutPut method formatting and argument order

- Fixed missing comma and invalid argument mapping
- Preserved existing business logic and DTO structure